json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,65 @@
 {
  "items": [
   {
+    "id": "jF4ZAqbHSgWHwSYg09gjSA",
+    "url": "https://remoteok.io/jobs/84971",
+    "title": "Experienced IOS Engineer",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``OR(pacif, pst, pdt, western, california, losangel, sanfrancisco, paloalto, sanmateo) 3W OR(time,timezon)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:app-store/mobile/16",
+      "DBG_TECH1:k/t/w:core-data/apple/8",
+      "DBG_TECH1:k/t/w:ios/apple/8",
+      "DBG_TECH1:k/t/w:ios/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:k/t/w:uitableview/apple/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=32, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=29, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/America/West"
+    ],
+    "tagsNames1": [
+      "US Pacific time zone"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Theorem",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "May 5, 2020 1:34:26 AM",
+    "validThrough": "May 12, 2020 1:34:26 AM",
+    "crawled": "May 5, 2020 2:05:17 AM",
+    "content": "<span></span> <span><h4>Theorem</h4></span> <br> <h3>Experienced IOS Engineer</h3> <div>  <div>   WHO WE ARE\\nFounded in 2007, Theorem (formerly Citrusbyte) is a remote-first, fully distributed, technology consulting company.\\n\\nOur customers, F1000's and startups alike, come to us because they need to change how something is done in order to succeed and they're looking for a solution that isn’t just about technology — but also people, process and leadership. We consult, form a diverse team of experts, and deliver strategy and execution all under one roof.\\n\\nOur services range from new product development, pure R&amp;D, legacy modernization, pricing strategy development, revenue generation, process optimization, to organizational transformation and cultural design.\\n\\n\\n\\n\\n\\nRESPONSIBILITIES AND DUTIES\\n\\n\\n\\n\\n* Architect and build iOS apps.\\n\\n* Work with product designers and clients to clarify requirements, prototype functionality and build products.\\n\\n* Be a leader-contributor on a team creating a distributed system that will change the way people shop and interact in a retail environment\\n\\n* Plan, estimate and prioritize work in a remote, distributed team environment\\n\\n* Guide our clients in best practices in order to achieve great project success\\n\\n* Our iOS Engineer has mastered&nbsp;Swift and POP concepts as well as UIKit, especially the UITableView and the UICollectionView.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nQUALIFICATION AND SKILLS\\n\\n\\n\\n\\n\\n\\n* Storyboards and Autolayout.\\n\\n* Dependency management&nbsp;\\n\\n* Architectural patterns\\n\\n* Multithreading\\n\\n* Unit Testing and, thus, is very used to Dependency Injection.\\n\\n* Networking\\n\\n* Writing reusable components with a top-class API Design.\\n\\n* Crash reporting, including non-fatals management.\\n\\n* Distribution to both the App Store and internal testers.\\n\\n* The HIG and the App Store Review Guidelines.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n* 5 + years of professional experience\\n\\n* Core Data in a multi-context setup.\\n\\n* Open-minded and able to demonstrate continuous learning.\\n\\n* Previous remote work experience\\n\\n* Previous experience collaborating on highly distributed teams\\n\\n* Possess a passion for software development\\n\\n* Possess a drive to get things done\\n\\n* Excellent communication skills\\n\\n* Previous consulting experience\\n\\n* Experience working within an Agile/Scrum environment.\\n\\n* Possess a strong and reliable internet connection.\\n\\n* Align a portion of your day with the business hours of Pacific Time Zone - UTC -7/8\\n\\n\\n\\n\\n\\n\\n\\n\\nBENEFITS AND PERKS\\n\\n\\n\\n* 100% REMOTE\\n\\n* TEAM RETREAT&nbsp;-&nbsp;Once a year the entire Theorem team gets together at an inspiring location to meet, work and play.\\n\\n* HEALTHY BODY, HEALTHY MIND - HAPPY TEAM&nbsp;-&nbsp;We offer paid vacation and support healthy lifestyles through our physical fitness benefits program.\\n\\n* HEALTHCARE &amp; FINANCE&nbsp;-&nbsp;For US based full time employees; we have comprehensive medical, dental, vision, and life insurance plans, plus we have a 401k plan.\\n\\n\\n\\n\\n\\nTheorem expects all team members to be honest, trustworthy, and operate with integrity. Discrimination and all unlawful harassment (including sexual harassment) in employment is not tolerated. We encourage success based on our individual merits and abilities, and all decisions regarding recruitment, hiring, promotion, compensation, employee development decisions such as training, and all other terms and conditions of employment, are based on business needs, job requirements and individual qualifications without regard to race, genetics, nationality, national origin, citizenship status, employment status, ethnicity, ethnic origin, color, creed, religion, belief, age, family or parental status, pregnancy, marital status, sex, gender, sex or gender assigned at birth, gender identity, sexual orientation, sexual preference, lifestyle, social class, military status, disability, hairstyle, physical features, or any other status protected by the laws or regulations in the locations where we operate. We oppose all forms of unlawful or unfair discrimination. Theorem encourages applicants of all ages. Theorem is an equal opportunity employer.No statements by Theorem are intended to create an offer of employment unless made in writing, signed by an officer of the company and no offer shall become effective unless countersigned by the prospective employee.\\n\\nAPPLY FOR THIS JOB  </div> </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "F-k0kQZcS4ugTpy0P9fItg",
     "url": "https://stackoverflow.com/jobs/386849/senior-ios-mobile-engineer-jack-henry-associates-inc?a=25JHD3Dm975S&so_medium=Talent&so_source=TalentApi",
     "title": "Senior iOS Mobile Engineer at Jack Henry & Associates, Inc.®  ",
