json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,72 @@
 {
  "items": [
   {
+    "id": "Mdr5k1bDQ1Kub7NdBRoijQ",
+    "url": "https://weworkremotely.com/remote-jobs/toggl-macos-developer",
+    "title": "Toggl: macOS Developer",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``remot 2W work W experi",
+      "DBG_TECH1:k/t/w:appkit/apple/8",
+      "DBG_TECH1:k/t/w:c#/c/2",
+      "DBG_TECH1:k/t/w:c#/dotnet/5",
+      "DBG_TECH1:k/t/w:c++/c/24",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:k/t/w:macos/apple/14",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:qt/c/5",
+      "DBG_TECH1:k/t/w:swift/apple/15",
+      "DBG_TECH1:k/t/w:swift/mobile/24",
+      "DBG_TECH1:k/t/w:windows/dotnet/8",
+      "DBG_TECH1:k/t/w:wpf/dotnet/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=21, c=33, mobile=34, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=42, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/c",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "c",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Toggl",
+      "sameAs": "https://toggl.com/"
+    },
+    "salary": {
+      "currency": "EUR",
+      "minValue": 48000,
+      "maxValue": 48000,
+      "info": "",
+      "unit": "YEAR",
+      "parser": "SalaryParserLargeText",
+      "isEquity": false,
+      "formatted": "EUR 48k /Year"
+    },
+    "employmentType": "UNSET",
+    "published": "May 8, 2020 5:12:24 PM",
+    "validThrough": "May 15, 2020 5:12:24 PM",
+    "crawled": "May 8, 2020 6:05:12 PM",
+    "content": "<h3> macOS Developer </h3><div><div>&nbsp;</div><div>You will be part of our desktop team, helping us bring our macOS app to the next level.<br><br></div><div>The salary for this position is €48,000 annually.<br><br></div><div>You can work from anywhere in the world.<br><br></div><div><strong><br>The role<br></strong><br></div><div>You will be responsible for developing the macOS UI in Swift and Objective-C, while also working with our C++ cross-platform library and contributing to the overall product development with ideas and solutions.<br><br></div><div>You will be joining our Desktop team that works with native technologies on 3 different platforms. Our native apps are currently developed in Swift/Obj-C/AppKit (macOS), C#/WPF (Windows), and C++/Qt (Linux), and are tied together with a shared C++ library code. We work with native technologies so that we can use all the power and functionalities provided by the OS.<br><br></div><div>You will be in good company, too. Toggl is a team of fantastic professionals. Everyone is smart, fun and caring.<br><br></div><div>We are profitable and self-funded, and we’re taking Toggl to the next level. Join us for the ride!<br><br></div><div><strong><br>About you<br></strong><br></div><div>You will be an excellent addition to the team if you are a skilled Swift/Obj-C developer with solid experience in macOS or you are experienced in iOS and have a desire to learn the intricacies of macOS development. You love working effectively in a small team that can execute fast and deliver even faster. You enjoy taking ownership of the product used by tens of thousands of people daily. You love collaborating with people from all disciplines and make sure to look at the big picture.<br><br></div><div>You will succeed in this role if you are self-motivated, have exceptional problem-solving skills and remain composed under pressure. Excellent written and spoken English skills are a must, and remote work experience is a plus.<br><br></div><div><strong><br>About the team<br></strong><br></div><div>Toggl is a distributed team of 75+ people working remotely from 30 countries. We take pride in our professional, learning-oriented and friendly working environment that values work-life balance and constantly doing our best in every aspect of our work. You can work from anywhere in the world, because we know great people do awesome work wherever they are. Every few months we travel to meet up somewhere in the world and spend some quality time together. Our business is profitable with a healthy margin and we are built with no outside investments, so you can count on a stable working environment.</div><div><strong><br>Some benefits<br></strong><br></div><ul><li>Freedom to choose when and where you work from.</li><li>24 days of paid time off a year, plus your local holidays.</li><li>2 company retreats and 2 team meetups a year (expenses covered) for team-building.</li><li>Laptop and a €2,000 budget to set up your home office.</li><li>Reimbursement for co-working space rent or internet service at home.</li><li>Opportunities to attend trainings, workshops or conferences.</li><li>Monthly reimbursement for gym membership, massage and other things to improve your health.</li><li>Support for buying a phone, eyeglasses or tools you need for doing your best work.&nbsp;</li></ul></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "jF4ZAqbHSgWHwSYg09gjSA",
     "url": "https://remoteok.io/jobs/84971",
     "title": "Experienced IOS Engineer",
