json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,60 @@
 {
  "items": [
   {
+    "id": "AeRiq_vpRVuWk1r3csqkqQ",
+    "url": "https://weworkremotely.com/remote-jobs/strucc-ios-engineer-video-photo-tool",
+    "title": "Strucc: iOS Engineer – Video/photo tool",
+    "tags": [
+      "DBG:surround``4N( OR(virtual,distribut,scatter), OR(compani,team,OR(organ,organis)))",
+      "DBG_TECH1:k/t/w:ios/apple/14",
+      "DBG_TECH1:k/t/w:ios/mobile/14",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=30, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=27, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Strucc",
+      "sameAs": "https://strucc.app/"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "May 11, 2020 11:39:18 AM",
+    "validThrough": "May 18, 2020 11:39:18 AM",
+    "crawled": "May 11, 2020 12:05:11 PM",
+    "content": "<h3> iOS Engineer – Video/photo tool </h3><div><div>At Strucc, we want to reinvent how people capture the moments that matter to them. By providing visual templates and easy to use customisation tools you are able to create impressive video edits in seconds with Strucc. (Download our<a href='https://apps.apple.com/us/app/strucc/id1460654148' rel='nofollow'> iOS app</a> and find us on <a href='https://www.instagram.com/strucc.app/' rel='nofollow'>Instagram</a>)<br><br><br></div><div>As an iOS engineer at Strucc you will work with world-class designers, engineers, and product people to develop the next versions of Strucc and iterate based on customer feedback and data. <br><br>In this position you'll build innovative video/photo capture and manipulation tools that will empower the creative process of our users. As we expand our product, you’ll be choosing the technologies we need to build toward our vision and work closely with two senior iOS engineers.<br><br>Strucc is backed by Sweet Studio, a venture studio that builds great consumer mobile products. <br><br><strong><br>Must-haves:</strong></div><ul><li>Expert with Swift, Xcode, and the rest of the iOS ecosystem (min. 3+ years of professional experience)</li><li>Experience with video/photo capture and manipulation tools using built in iOS SDKs (e.g. Core Image, Media Library)</li><li>Experience deploying and supporting code in production</li><li>You’re a strong communicator and fluent in English<br><br><br><br></li></ul><div><strong>You’ll be successful if you are</strong></div><ul><li>A collaborative person who wants to see the team succeed in its goals</li><li>Being practical about tradeoffs between speed and polish</li><li>You’re passionate about what you do and the products you create</li><li>Excited to join a small team that moves quickly</li><li>You can work with at least 4 hours overlap with 9.00—18.00 in the (GMT+1) timezone<br><br><br><br></li></ul><div><strong>We prefer but don't require:</strong></div><ul><li>Experience with A/B testing and running experiments</li><li>Experience working and creating with graphic shaders (MetalKit/Open GL)</li><li>Experience working in a distributed team<br><br><br><br></li></ul><div><strong>Position is a full-time and ongoing contract.</strong><br><br><br></div><div>We are a small team which means that your impact on the success of the company will be huge. We would love to speak to you about this role if you love working on video/photo capture and manipulation tools and are excited about delivering high-impact features at Strucc.<br><br><br><br><br></div><div><br></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "Mdr5k1bDQ1Kub7NdBRoijQ",
     "url": "https://weworkremotely.com/remote-jobs/toggl-macos-developer",
     "title": "Toggl: macOS Developer",
