json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,64 @@
 {
  "items": [
   {
+    "id": "FCWTM1hJT92Cwv314MM2BA",
+    "url": "https://remote.co/job/user-experience-designer-mobile/",
+    "title": "User Experience Designer, Mobile",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``OR(eastern, east, est, edt, newyork) 3W OR(time,timezon)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:k/t/w:macos/apple/2",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=4, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=4, java=1, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/America/East"
+    ],
+    "tagsNames1": [
+      "US East time zone"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "FormAssembly",
+      "sameAs": "https://www.formassembly.com/"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "May 14, 2020 5:21:46 PM",
+    "validThrough": "May 21, 2020 5:21:46 PM",
+    "crawled": "May 14, 2020 6:06:16 PM",
+    "content": "<div><span><i></i> Remote</span>        </div><div>            <p>Location:&nbsp;Remote Remote US</p><p>Hello! Are you interested in joining a 100% remote SaaS company dedicated to helping customers streamline organizational processes and be better stewards of their data? Consider applying for open positions at FormAssembly, an enterprise web form creation and collection platform used by some of the largest and most well-known organizations in the world.</p><p>We are a team of collaborators that are passionate about providing the very best to our customers, partners, and stakeholders, internally and externally. We are travelers, artists, athletes, and animal lovers creating an incredibly strong, fully remote team and providing amazing results, no matter where we are. Were problem solvers and continuous learners who are never afraid of a challenge, and were looking to add another amazing member to our Product team.</p><p>Were looking for a&nbsp;User Experience Designer&nbsp;to join our growing product team at FormAssembly.</p><p>As a UX Designer, heres how youll help FormAssembly deliver exceptional user experiences through our product:</p><ul><li>Develop intuitive, usable, and engaging interactions and visual designs for mobile.</li><li>Create and iterate rapidly on low-fidelity wireframes</li><li>Design artifacts such as journey maps, experience flow diagrams, and presentations to communicate your design approach and gain alignment across stakeholders</li><li>Research best practices in and around mobile applications to build features that meet the product vision along with address customer needs</li><li>Document design decisions with high fidelity mock ups and detailed descriptions</li><li>Collaborate cross-functionally with engineers, support, marketing, sales, and business development teams to identify pain points and improve user experience through design solutions</li><li>Drive your design decisions with data strategize and conduct meaningful user research, collect customer feedback, then synthesize and present your findings as design concepts</li><li>Perform usability testing to validate design directions and inform opportunities for improvement</li></ul><p><strong>Requirements</strong></p><p>Successful candidates will have the following skills:</p><ul><li>Design experience with iOS and Android applications</li><li>Must be located in a US Eastern/Central time zone, or&nbsp;be able to work standard US Eastern hours daily</li><li>Familiar with&nbsp;Sketch,&nbsp;Slack&nbsp;and&nbsp;Jira</li><li>Knowledge of&nbsp;Salesforce Lightning Design,&nbsp;Pendo, and&nbsp;Gherkin</li><li>Comfortable in an Agile work environment</li><li>Excellent communicator and writer</li><li>Experience creating and maintaining a living style guide and design elements library</li></ul><p><strong>Bonus points for:</strong></p><ul><li>Experience working remote</li></ul><p><strong>About Us</strong></p><p>FormAssembly is a leading enterprise data collection platform, built to help organizations streamline processes and drive quality form conversions. At our core, our mission is to help organizations collect, use, and be good stewards of the personal data entrusted to them.</p><p>We work across multiple industries with well-known customers, including Amazon, Aetna, Lenovo, Volvo and others. We have been recognized in the 2018 and 2019 Inc. 5000 lists of fastest growing private companies, and we are a G2 Crowd Winter 2019 Leader.</p><p>Here are some links to give you a peek into what its like to work at FormAssembly:</p><ul><li>Meet our awesome team.</li><li>Learn how and why we work remotely.</li></ul><p>If youre a genuinely nice person who is great to work with, respectful, and who will put the team and our customers first, wed be thrilled to have you apply for this position. FormAssembly is an equal opportunity employer. If you belong to an under-represented group in tech, youll find a welcoming culture that thrives on diversity.</p><p>This is a full-time position, open to all locations (working remotely from home).</p><p><strong>Benefits</strong></p><p>FormAssembly offers several benefits that help to facilitate a healthy team, personal growth, and a work-life balance, all of which contribute to creating a more engaged and passionate workforce.</p><ul><li>Health benefits (health, dental, vision)&nbsp;for team members based in the United States</li><li>401(k) with 4% company match&nbsp;for team members based in the United States</li><li>4 weeks paid vacation and 9 company holidays</li><li>Flexible work schedule</li><li>Paid parental leave</li><li>Charitable contribution match</li><li>Budget for professional development</li><li>Company provided Mac laptop</li></ul><p>You’ll be joining a talented and fun team, working together to build something great!</p>        </div><div>        <a href='https://apply.workable.com/j/3E0AA76C0B' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "AeRiq_vpRVuWk1r3csqkqQ",
     "url": "https://weworkremotely.com/remote-jobs/strucc-ios-engineer-video-photo-tool",
     "title": "Strucc: iOS Engineer – Video/photo tool",
