--- a/_data/jobnav.yml
+++ b/_data/jobnav.yml
@@ -21,7 +21,7 @@
       Apache Cordova/PhoneGap"
       description: 'Browse 100% remote Frontend (JavaScript) jobs.
       Find your next remote Frontend job today, on remote4me!'
-      url: /remote-frontend-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_frontend
       mailGroupDay: 10484476
       mailGroupWeek: 10484474
@@ -35,7 +35,7 @@
       undertagline: "<strong>Includes:</strong> iOS, Android, Windows Phone, Apache Cordova/PhoneGap, Xamarin and other technologies for mobile apps. <br/><strong>Excludes:</strong> backend Java and macOS programming"
       description: 'Browse 100% remote Mobile (iOS, Android, Windows Phone) jobs.
       Find your next Mobile job today, on remote4me!'
-      url: /remote-mobile-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_mobile
       mailGroupDay: 10484478
       mailGroupWeek: 10484482
@@ -49,7 +49,7 @@
       undertagline: "<strong>Includes</strong>: Backend- and Web-programming with Java and Scala <br/><strong>Excludes</strong>: Android programming"
       description: 'Browse 100% remote Java and Scala jobs.
       Find your next remote Java/Scala job today, on remote4me!'
-      url: /remote-java-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_java
       mailGroupDay: 10487140
       mailGroupWeek: 10487142
@@ -67,7 +67,7 @@
       <strong>Excludes:</strong> Web programming with Java or Python"
       description: 'Browse 100% remote (Big)Data/ML/Data Engineering jobs.
       Find your next remote (Big)Data job today, on remote4me!'
-      url: /remote-big-data-science-machine-learning-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_bigdata-ml
       mailGroupDay: 10487146
       mailGroupWeek: 10484482
@@ -81,7 +81,7 @@
       undertagline: "<strong>Includes:</strong> Django, Flask, SQLAlchemy and other Python frameworks/libraries <br/><strong>Excludes:</strong> Python for science"
       description: 'Browse 100% remote Python jobs.
       Find your next remote Python job today, on remote4me!'
-      url: /remote-python-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_python
       mailGroupDay: 10487152
       mailGroupWeek: 10487154
@@ -95,7 +95,7 @@
       undertagline: "<strong>Includes:</strong> C# and other .NET languages; VB.NET, ASP.NET, WPF, desktop applications for Windows, Microsoft Azure and other Microsoft technologies. <br/><strong>Excludes:</strong> Windows Phone"
       description: 'Browse 100% remote C# and .NET jobs.
       Find your next remote .NET job today, on remote4me!'
-      url: /remote-dotnet-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_dotnet
       mailGroupDay: 10487178
       mailGroupWeek: 10487176
@@ -109,7 +109,7 @@
       undertagline: "<strong>Includes:</strong> frameworks like Ruby on Rails, Sinatra, RSpec"
       description: 'Browse 100% remote Ruby jobs.
       Find your next remote Ruby job today, on remote4me!'
-      url: /remote-ruby-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_ruby
       mailGroupDay: 10487196
       mailGroupWeek: 10487198
@@ -124,7 +124,7 @@
       undertagline: "<strong>Includes:</strong> backend JavaScript technologies like Node.js, Meteor, Express.js. <br/><strong>Excludes:</strong> frontend and mobile JavaScript"
       description: 'Browse 100% remote backend JavaScript(Node.js) jobs.
       Find your next remote Node.js job today, on remote4me!'
-      url: /remote-nodejs-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_nodejs
       mailGroupDay: 10487246
       mailGroupWeek: 10487248
@@ -138,7 +138,7 @@
       undertagline: "<strong>Includes:</strong> everything related to Go programming language"
       description: 'Browse 100% remote Go/Golang jobs.
       Find your next remote Go job today, on remote4me!'
-      url: /remote-go-golang-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_go
       mailGroupDay: 10487260
       mailGroupWeek: 10487262
@@ -152,7 +152,7 @@
       undertagline: "<strong>Includes:</strong> technologies like Qt, GCC, glibc, STL, Boost and Assembly language"
       description: 'Browse 100% remote C/C++ jobs.
       Find your next remote C/C++ job today, on remote4me!'
-      url: /remote-c-plus-plus-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_c
       mailGroupDay: 10487300
       mailGroupWeek: 10487302
@@ -167,7 +167,7 @@
       undertagline: "<strong>Includes:</strong> PHP frameworks like WordPress, Drupal, Laravel, Symfony, CodeIgniter, Zend"
       description: 'Browse 100% remote PHP jobs.
       Find your next remote PHP job today, on remote4me!'
-      url: /remote-php-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_php
       mailGroupDay: 10494936
       mailGroupWeek: 10494938
@@ -181,7 +181,7 @@
       undertagline: "<strong>Includes:</strong> MacOS, Xcode, Cocoa Touch and other Apple-related technologies <br/><strong>Excludes:</strong> iOS, iPhone"
       description: 'Browse 100% remote Apple-related jobs.
       Find your next remote Apple developer job today, on remote4me!'
-      url: /remote-apple-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_apple
       mailGroupDay: 10494924
       mailGroupWeek: 10494926
@@ -195,7 +195,7 @@
       undertagline: "<strong>Includes:</strong> Firmware and hardware development, microcontroller programming, technologies like Embedded Linux, Arduino, ARM, robots"
       description: 'Browse 100% remote embedded applications/devices jobs.
       Find your next remote embedded job today, on remote4me!'
-      url: /remote-embedded-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_embedded
       mailGroupDay: 10494948
       mailGroupWeek: 10494950
@@ -209,7 +209,7 @@
       undertagline: "<strong>Includes:</strong> Game development, game engines like Unity, Unreal Engine, GameMaker, CryEngine, Cocos2d-x"
       description: 'Browse 100% remote Game development jobs.
       Find your next remote Game development job today, on remote4me!'
-      url: /remote-gamedev-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_gamedev
       mailGroupDay: 10494982
       mailGroupWeek: 10494984
@@ -223,7 +223,7 @@
       undertagline: "<strong>Includes:</strong> Perl, Clojure, Haskell, Elixir, Rust, Shell script, Lisp, Erlang, OCaml, F#"
       description: 'Browse 100% remote Perl/Clojure/Haskell/Perl/Clojure/Haskell jobs.
       Find your next remote Perl/Clojure/Haskell/Perl/Clojure/Haskell job today, on remote4me!'
-      url: /remote-other-technologies-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TECH1_other
       mailGroupDay: 10495054
       mailGroupWeek: 10495056
@@ -253,7 +253,7 @@
       Network engineers, Kubernetes Server Engineers'
       description: 'Browse 100% remote DevOps/Cloud Engineers jobs.
       Find your next remote DevOps job today, on remote4me!'
-      url: /remote-devops-sysadmin-sre-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_admin
       col: 2
       mailGroupDay: 10495080
@@ -270,7 +270,7 @@
       Software Development Engineer in Test (SDET), Product Tester, User Tester"
       description: 'Browse 100% remote QA jobs.
       Find your next remote QA job today, on remote4me!'
-      url: /remote-qa-test-engineer-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_qa
       col: 2
       mailGroupDay: 10495130
@@ -287,7 +287,7 @@
       AWS Architects"
       description: 'Browse 100% remote Solution Engineer/Architect jobs.
       Find your next remote Solution Engineer/Architect job today, on remote4me!'
-      url: /remote-solution-engineer-architect-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_solution
       col: 2
       mailGroupDay: 10495170
@@ -304,7 +304,7 @@
       Threat Researchers, Penetration Testers"
       description: 'Browse 100% remote Security/Cryptography jobs.
       Find your next remote Security/Cryptography job today, on remote4me!'
-      url: /remote-security-cybersecurity-cryptography-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_sec
       col: 2
       # Daily Remote Security, Cybersecurity and Cryptography jobs (GroupID - 49309442)
@@ -326,7 +326,7 @@
       Care-NG CRM developers, SAS developers"
       description: 'Browse 100% remote ERP/CRM/Enterprise Software jobs.
       Find your next remote Enterprise Software job today, on remote4me!'
-      url: /remote-dynamics-salesforce-sap-erp-crm-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_crmerp
       col: 2
       # Daily Remote ERP/CRM/Enterprise software jobs (GroupID - 49309152)
@@ -347,7 +347,7 @@
       MongoDB Database Administrators"
       description: 'Browse 100% remote DBMS Developer and DBA jobs.
       Find your next remote DBMS job today, on remote4me!'
-      url: /remote-dbms-developer-admin-dba-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_dbms
       col: 2
       mailGroupDay: 10495204
@@ -363,7 +363,7 @@
       Engineers, Automation Developers, Automation Engineers, Data Integration Engineers"
       description: 'Browse 100% remote Integration/Automation jobs.
       Find your next remote Integration Engineer job today, on remote4me!'
-      url: /remote-integration-build-automation-engineer-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_integration
       col: 2
       mailGroupDay: 10495212
@@ -390,7 +390,7 @@
       2d and 3d artist, Animator, Video animator, Video Editor, Film Making specialist"
       description: 'Browse 100% remote Designer/Artist jobs.
       Find your next remote Designer/Artist job today, on remote4me!'
-      url: /remote-designer-graphic-video-artist-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_designer
       col: 3
       mailGroupDay: 10495250
@@ -409,7 +409,7 @@
       Administrative Assistants, Executive Administrators, Executive Support, Operations Associate"
       description: 'Browse 100% remote Support and Administrative Assistant jobs.
       Find your next remote Support job today, on remote4me!'
-      url: /remote-customer-support-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_support
       col: 3
       mailGroupDay: 10495348
@@ -426,7 +426,7 @@
        Storytellers, Communication Editors, Proofreaders"
       description: 'Browse 100% remote (Technical) Writer/Editor jobs.
       Find your next remote Writer job today, on remote4me!'
-      url: /remote-copywriter-editor-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_writer
       col: 3
       mailGroupDay: 10495358
@@ -444,7 +444,7 @@
       Growth Managers and Search Engine Optimization(SEO) specialists"
       description: 'Browse 100% remote Product, Marketing and SEO jobs.
       Find your next remote Product/Marketing job today, on remote4me!'
-      url: /remote-marketing-product-seo-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_product
       col: 3
       mailGroupDay: 10495388
@@ -461,7 +461,7 @@
       Account Manager, Relationship Management and Buyer"
       description: 'Browse 100% remote Sales/Business Development/Account Manager jobs.
       Find your next remote Sales job today, on remote4me!'
-      url: /remote-sales-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_sales
       col: 3
       mailGroupDay: 10495988
@@ -478,7 +478,7 @@
       and Scrum Masters"
       description: 'Browse 100% remote Manager/Director/VP/Scrum master jobs.
       Find your next remote Management job today, on remote4me!'
-      url: /remote-manager-executive-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_manager
       col: 3
       mailGroupDay: 10496140
@@ -494,7 +494,7 @@
       Acquisition specialists, Sourcing specialists, Hiring- and People Managers"
       description: 'Browse 100% remote Recruiter/HR/Talent Acquisition jobs.
       Find your next remote HR job today, on remote4me!'
-      url: /remote-hr-recruiter-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_HR
       col: 3
       mailGroupDay: 10496254
@@ -511,7 +511,7 @@
       specialists, Order Management, Accounts Receivable and Audit specialists"
       description: 'Browse 100% remote Accountant/Bookkeeper/Finance/Audit jobs.
       Find your next remote Finance job today, on remote4me!'
-      url: /remote-finance-and-accounting-jobs
+      url: https://docs.google.com/forms/d/e/1FAIpQLSdRZ6YDQMHFPAzX-Nd0EGcCWrA-X9yiZSj5vf1GteXjv9uX_g/viewform?usp=dialog
       datafile: TITLE1_finacc
       col: 3
       # Daily Remote Finance and Accounting jobs (GroupID - 49308800)
